--- a/app/src/main/res/layout/layout_chat_from_me.xml
+++ b/app/src/main/res/layout/layout_chat_from_me.xml
@@ -26,11 +26,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/message_layout"
         android:text="The quick brown fox jumped over the lazy dog"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fromme_img_thumbnail"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fromme_img_thumbnail" />
+        app:layout_constraintTop_toTopOf="@+id/fromme_img_thumbnail"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
