--- a/app/src/main/res/layout/layout_chat_from_user.xml
+++ b/app/src/main/res/layout/layout_chat_from_user.xml
@@ -26,12 +26,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="80dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/message_layout"
         android:text="The quick brown fox jumped over the lazy dog"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/fromuser_img_thumbnail"
-        app:layout_constraintTop_toTopOf="@+id/fromuser_img_thumbnail" />
+        app:layout_constraintTop_toTopOf="@+id/fromuser_img_thumbnail"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
